--- a/composer.json
+++ b/composer.json
@@ -17,10 +17,11 @@
 		"phpcompatibility/phpcompatibility-wp": "*"
 	},
 	"scripts": {
-		"compat": "@php ./vendor/squizlabs/php_codesniffer/bin/phpcs --standard=phpcompat.xml.dist --report=summary,source",
-		"phpcs": "@php ./vendor/squizlabs/php_codesniffer/bin/phpcs --report=summary,source",
-		"phpcs:full": "@php ./vendor/squizlabs/php_codesniffer/bin/phpcs",
-		"fix-phpcs": "@php ./vendor/squizlabs/php_codesniffer/bin/phpcbf --report=summary,source"
+		"lint": "@php ./vendor/squizlabs/php_codesniffer/bin/phpcs --report=summary,source",
+		"lint:compat": "@php ./vendor/squizlabs/php_codesniffer/bin/phpcs --standard=phpcompat.xml.dist --report=summary,source",
+		"lint:full": "@php ./vendor/squizlabs/php_codesniffer/bin/phpcs",
+		"lint:format": "@php ./vendor/squizlabs/php_codesniffer/bin/phpcbf --report=summary,source",
+		"automation:lint:compat": "@php ./vendor/squizlabs/php_codesniffer/bin/phpcs --standard=phpcompat.xml.dist -q --report=checkstyle"
 	},
 	"support": {
 		"issues": "https://wordpress.org/support/plugin/siteh-health-tools"
