Tools/Testing: Add PHPStan to introduce some static code analysis, and help prevent future errors.

--- a/composer.json
+++ b/composer.json
@@ -8,20 +8,26 @@
 	],
 	"license": "GPL-2.0-or-later",
 	"require": {
-		"php": ">=7.1"
+		"php": ">=7.1",
+		"ext-json": "*"
 	},
 	"require-dev": {
 		"dealerdirect/phpcodesniffer-composer-installer": "~1.0.0",
 		"wp-coding-standards/wpcs": "^2.3.0",
 		"phpunit/phpunit": "~7.4.0",
-		"phpcompatibility/phpcompatibility-wp": "*"
+		"phpcompatibility/phpcompatibility-wp": "*",
+		"phpstan/phpstan": "^1.4",
+		"szepeviktor/phpstan-wordpress": "^1.0",
+		"phpstan/extension-installer": "^1.1"
 	},
 	"scripts": {
 		"lint": "@php ./vendor/squizlabs/php_codesniffer/bin/phpcs --report=summary,source",
 		"lint:compat": "@php ./vendor/squizlabs/php_codesniffer/bin/phpcs --standard=phpcompat.xml.dist --report=summary,source",
 		"lint:full": "@php ./vendor/squizlabs/php_codesniffer/bin/phpcs",
 		"lint:format": "@php ./vendor/squizlabs/php_codesniffer/bin/phpcbf --report=summary,source",
-		"automation:lint:compat": "@php ./vendor/squizlabs/php_codesniffer/bin/phpcs --standard=phpcompat.xml.dist -q --report=checkstyle"
+		"phpstan": "phpstan analyse . --no-progress",
+		"automation:lint:compat": "@php ./vendor/squizlabs/php_codesniffer/bin/phpcs --standard=phpcompat.xml.dist -q --report=checkstyle",
+		"automation:phpstan": "phpstan analyse . --error-format=checkstyle --no-progress"
 	},
 	"support": {
 		"issues": "https://wordpress.org/support/plugin/siteh-health-tools"
@@ -31,7 +37,8 @@
 			"php": "7.1"
 		},
 		"allow-plugins": {
-			"dealerdirect/phpcodesniffer-composer-installer": true
+			"dealerdirect/phpcodesniffer-composer-installer": true,
+			"phpstan/extension-installer": true
 		}
 	}
 }
